Migrate to Vue 3! round #1

--- a/index.HTML
+++ b/index.HTML
@@ -121,8 +121,7 @@
                         </div>
                         <div class="panel-footer p-2 mt-2">
                             <h3>What is this app for?</h3>
-                            <p style="text-align: justify;">Many people have need to count (words, items, maraton runners) among other things that go fast. Other people have tasks to count the accuracy of specific items on a production line. Another synario is religious people who set them selves a goal to say "precious words" for thousands of times, which is too hard to focus on. Also in sports, referees can use this app to count shots, fouls, passes and so on. Therefor, this app can help users do their "counting tasks" easily and achieve their goals. 
-                            <h3>Features</h3>
+                            <p style="text-align: justify;">Many people have need to count (words, items, maraton runners) among other things that go fast. Other people have tasks to count the accuracy of specific items on a production line. Another synario is religious people who set them selves a goal to say "precious words" for thousands of times, which is too hard to focus on. Also in sports, referees can use this app to count shots, fouls, passes and so on. Therefor, this app can help users do their "counting tasks" easily and achieve their goals.                             <h3>Features</h3>
                             <ul class="pr-0 pl-3" style="text-align: left;">
                                 <li>Add more records to count multi-tasks separately</li>
                                 <li>Set a goad for each record and monitor how far you have come on the left-bar</li>
