--- a/vue3/index.html
+++ b/vue3/index.html
@@ -14,6 +14,10 @@
 
   <body>
     <div id="app"></div>
+    <!-- Firebase SDK -->
+    <script src="/src/assets/firebase-app_7.6.1.js"></script>
+    <script src="/src/assets/firebase-firestore_7.6.1.js"></script>
+    <script src="/src/assets/firebase-auth_7.19.1.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
