fix: Logout button visibility and confirmation dialog

--- a/index.HTML
+++ b/index.HTML
@@ -101,22 +101,22 @@
                             </div>
                             <div class="records pb-3"> </div>
                             <div class="login-buttons-container">
-                                <div class="">
-                                    <button id="signin-google" data-signin-type="google"
-                                        class="signin font-4 btn btn-block border-0 mt-3 p-0 p-2 d-flex align-items-center">
-                                        <img src="assets/img/google-favico.png" class="px-3"> Signin with Google
-                                    </button>
+                                <div class="d-flex justify-content-between">
                                     <button id="signin-facebook" data-signin-type="facebook"
                                         class="signin font-4 btn btn-block color-white border-0 mt-3 p-0 p-2 d-flex align-items-center">
-                                        <img src="assets/img/facebook-favico.png" class="px-3"> Signin with Facebook
+                                        <img src="assets/img/facebook-favico.png" class="px-3"> Sign in
+                                    </button>
+                                    <button id="signin-google" data-signin-type="google"
+                                        class="signin font-4 btn btn-block border-0 mt-3 p-0 p-2 d-flex align-items-center">
+                                        <img src="assets/img/google-favico.png" class="px-3"> Sign in
                                     </button>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between mt-3">
-                                <button id="showPrayers" class="btn color-white py-2">
+                                <button id="showPrayers" class="btn color-white py-2 d-flex justify-content-center">
                                     <img src="assets/img/ico-muslimpro.png"> Prayers
                                 </button>
-                                <button id="logoutBtn" class="btn bg-grey color-grey py-2">
+                                <button id="logoutBtn" class="btn bg-grey color-grey py-2 d-flex justify-content-center">
                                     <i class="fas fa-sign-out-alt mr-2"></i>Logout
                                 </button>
                             </div>
